--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.profiles.active=dev
+spring.profiles.active=local
+springdoc.enable-native-support=true
+springdoc.swagger-ui.path=/swagger-ui
