Added features for swagger and ManyToOne

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.profiles.active=local
+spring.profiles.active=dev
 springdoc.enable-native-support=true
 springdoc.swagger-ui.path=/swagger-ui
+management.endpoints.jmx.exposure.include=health,metrics,info,env,beans,configprops
+management.endpoints.web.exposure.include=health,metrics,info,env,beans,configprops
